language/move-lang/tests/move_check/expansion/duplicate_field_unpack.exp
error: 

   ┌── tests/move_check/expansion/duplicate_field_unpack.move:4:13 ───
   │
 4 │         let S { f, f } = S { f: 0 };
   │             ^^^^^^^^^^ Invalid deconstruction binding
   ·
 4 │         let S { f, f } = S { f: 0 };
   │                    - Duplicate binding given for field 'f'
   ·
 4 │         let S { f, f } = S { f: 0 };
   │                 - Previously defined here
   │

