language/move-lang/tests/move_check/expansion/duplicate_field_unpack.move
module M {
    struct S { f: u64 }
    foo() {
        let S { f, f } = S { f: 0 };
    }
}
